# pia-nm

./: .gitattributes  .gitignore  ATTRIBUTION.md  CODE_QUALITY_REPORT.md  COMMANDS.md  CONTRIBUTING.md  DBUS_IMPLEMENTATION_REPORT.md  DISPATCHER_NOTIFY.md  FAQ.md  INSTALL.md  LICENSE  Makefile  PACKAGING_REFACTOR.md  PERMISSIONS_FIX.md  POLICYKIT_FIX.md  README.md  TOKEN_REFRESH_FIX.md  TROUBLESHOOTING.md  build-pex.sh  debug_connection.py  pia-nm.spec  pyproject.toml  renovate.json  test_nm_debug.py  test_notify_dispatcher.py
.github/workflows/: build-pex.yml  build-rpm.yml  renovate-fedora-update.yml
pia_nm/: __init__.py  __main__.py  api_client.py  cli.py  config.py  dbus_client.py  dispatcher.py  error_handling.py  logging_config.py  network_manager.py  systemd_manager.py  token_refresh.py  wireguard.py  wireguard_connection.py
tests/: __init__.py  test_api_client.py  test_cli.py  test_config.py  test_dbus_client.py  test_error_handling_properties.py  test_integration.py  test_network_manager.py  test_systemd_manager.py  test_token_refresh.py  test_token_refresh_properties.py  test_wireguard.py  test_wireguard_connection.py  test_wireguard_connection_properties.py
