[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pia-nm"
version = "0.1.0"
description = "Automated WireGuard token refresh for Private Internet Access (PIA) VPN in NetworkManager"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PIA-NM Contributors"}
]
requires-python = ">=3.9"
keywords = ["vpn", "wireguard", "networkmanager", "pia", "private-internet-access", "automation", "token-refresh"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]

dependencies = [
    "requests>=2.31.0",
    "keyring>=24.0.0",
    "PyYAML>=6.0",
    "PyGObject>=3.42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pylint>=2.15.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
    "hypothesis>=6.0.0",
]

[project.scripts]
pia-nm = "pia_nm.cli:main"

[tool.setuptools]
packages = ["pia_nm"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "R0913",  # too-many-arguments
]

[tool.pylint.format]
max-line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
